[package]
name = "qynauth"
version = "0.1.0"
edition = "2021"
authors = ["Minkalla Technologies"]
license = "Apache-2.0"
description = "Core Rust components for the Minkalla QynAuth framework."
repository = "https://github.com/minkalla/qynauth"
readme = "README.md"

[dependencies]
# We will add Rust dependencies here as needed, such as for quantum-safe crypto libraries.
