    [tool.poetry]
    name = "qynauth"
    version = "0.1.0"
    description = "Quantum authentication (Rust/Python hybrid)"
    authors = ["Minkalla Technologies <info@minkalla.org>"] # Updated author to reflect project
    readme = "README.md"

    # This specifies that all source code is rooted under the 'app' directory within 'src/python_app/'
    packages = [
        { include = "app", from = "src/python_app" }
    ]


    [tool.poetry.dependencies]
    python = "^3.10"
    fastapi = "^0.111.0"
    uvicorn = {extras = ["standard"], version = "^0.30.1"}
    pydantic = "^2.7.4"
    pyjwt = "^2.10.1"

    [tool.poetry.group.dev.dependencies]
    pytest = "^8.2.2"
    black = "^24.4.2"
    flake8 = "^7.1.0"
    isort = "^5.13.2"

    [build-system]
    requires = ["poetry-core"]
    build-backend = "poetry.core.masonry.api"
    
    [tool.pytest.ini_options]
    pythonpath = ["src/python_app"]